--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 certifi==2022.12.7
 charset-normalizer==3.1.0
 idna==3.4
+pypng==0.20220715.0
 pytube==12.1.3
+qrcode==7.4.2
+typing_extensions==4.5.0
 urllib3==1.26.15
